--- a/resources/layouts/layout.xml
+++ b/resources/layouts/layout.xml
@@ -1,4 +1,8 @@
-<layout id="MainLayout">
-    <label x="center" y="5" text="@Strings.prompt" color="Graphics.COLOR_WHITE" justification="Graphics.TEXT_JUSTIFY_CENTER" />
-    <bitmap id="id_monkey" x="center" y="30" filename="../drawables/monkey.png" />
-</layout>
+<resources>
+    <layout id="MainLayout">
+        <label id="id_prompt_label" x="center" y="center" font="Graphics.FONT_TINY" text="" color="Graphics.COLOR_WHITE" justification="Graphics.TEXT_JUSTIFY_CENTER" />
+    </layout>
+    <layout id="ReportLayout">
+        <label id="id_label" x="center" y="center" font="Graphics.FONT_XTINY" text="" color="Graphics.COLOR_WHITE" justification="Graphics.TEXT_JUSTIFY_CENTER|Graphics.TEXT_JUSTIFY_VCENTER" />
+    </layout>
+</resources>
