--- a/resources/layouts/layout.xml
+++ b/resources/layouts/layout.xml
@@ -1,6 +1,6 @@
 <resources>
     <layout id="MainLayout">
-        <label id="id_prompt_label" x="center" y="center" font="Graphics.FONT_TINY" text="" color="Graphics.COLOR_WHITE" justification="Graphics.TEXT_JUSTIFY_CENTER" />
+        <bitmap id="id_background" x="center" y="center" filename="../drawables/launcher_icon.png" />
     </layout>
     <layout id="ReportLayout">
         <label id="id_label" x="center" y="center" font="Graphics.FONT_XTINY" text="" color="Graphics.COLOR_WHITE" justification="Graphics.TEXT_JUSTIFY_CENTER|Graphics.TEXT_JUSTIFY_VCENTER" />
